Solve issue of Myloans table tabs are not aligned

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -493,6 +493,15 @@ body{
   .d-xs-none{
     display: none;
   }
+  .portfolio-row{
+    position: relative!important;
+    margin-top:0;
+  }
+  .my-loans-tab{
+    position: relative!important;
+    left:0!important;
+    top:0!important;
+  }
 }
 @media screen and (min-width: 320px) and (max-width: 480px){
   .header-links{
